Fixed issue with invisible hamburger on mobile

--- a/count-your-eggs-stylesheet.css
+++ b/count-your-eggs-stylesheet.css
@@ -44,6 +44,18 @@ nav a {
 	font-size: 1.1em;
 }
 
+.navbar-toggle .icon-bar {
+    background-color: #003300;
+}
+
+button.navbar-toggle {
+	border-radius: 10px;
+}
+
+button.navbar-toggle:hover {
+	background-color:#f5f5f5
+}
+
 #tagline {
 	font-size: 1.3em;
 }
@@ -137,7 +149,6 @@ label {
 	font-weight: bold;
 	background-color: #4b7000;
 }
-
 #reset {
 	color: #F2F3F3;
 	background-color: #485151;
